2004-10-28 Derek Price <derek@ximbiot.com>

	* client.c (handle_redirect): Detect redirect loops.
	* sanity.sh (client-20): Test that client detects redirect loops.

2004-10-28  Mark D. Baushke  <mdb@cvshome.org>

	* release.c (release): Allow builds of cvs with --disable-server
	--disable-client both used for local installation configuration.
	* root.c (Name_Root): Ditto.
	* update.c (checkout_file): Ditto.
	* edit.c (edit_fileproc): Ditto.
	* import.c (import): Ditto.
	(Problem reported by Jean Olivier Caron <jecar@mlab.t.u-tokyo.ac.jp>.)

2004-10-27  Mark D. Baushke  <mdb@cvshome.org>

	* cvs.h (RCS_FLAGS_USETIME): New flag.
	* rcs.c (RCS_checkin): Add citime argument.
	* rcs.h (RCS_checkin): Ditto.
	* checkin.c (Checkin): Pass new RCS_checkin argument.
	* commit.c (remove_file, checkaddfile): Ditto.
	* import.c (add_rev): Ditto.

	* sanity.sh (tagdate): Delete tagdate-19b as an incorrect test.

2004-10-27  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (tagdate): Provide more output.

2004-10-26  Mark D. Baushke  <mdb@cvshome.org>

	* commit.c (checkaddfile): Create a dead version for a new file
	added to a branch. Fixes FIXCVS for tagdate tests.
	* sanity.sh (tagdate): Update to expect correct results.
	(death2, branch-after-import, join, ignore-on-branch): Ditto.
	
2004-10-26  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (isProxyServer): Fix hostname setup.

2004-10-26 Derek Price <derek@ximbiot.com>

	Call all exit handlers via atexit() & exit().  Signal handlers exit().
	Eliminates a compiler warning.

	* exithandle.c (cleanup_register): Don't register a signal handler.
	Register a function to block signals before the exit handler is called.
	* lock.c (Lock_Cleanup): Remove never_run_again cruft and assoc. cmts.
	* rcs.c (rcs_cleanup), server.c (server_cleanup): Ditto, plus assume
	signals are blocked.
	* main.c (main_cleanup): Declare noreturn attribute.

2004-10-26 Derek Price <derek@ximbiot.com>
